fix: Bugs fixed